--- a/src/views/pages/about.hbs
+++ b/src/views/pages/about.hbs
@@ -1,6 +1,7 @@
 <!DOCTYPE html> 
 <html>
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Insta Weather</title>
         <link rel="stylesheet" href="/css/styles.css">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -10,19 +11,17 @@
        <div class="container">
             <div class="row">
                 <div class="col-sm-12">
-                        <h1 class="about-h">About</h1>
+                    <h1 class="about-h">About</h1>
                 </div>
             </div>
              <div class="row">
                 <div class="col-sm-12">
-                        <p class="about-p">
-                            Insta Weather is an user friendly and effective application to help you find the current weather forecast of any desired location.
-
-                        </p>
+                    <p class="about-p">
+                        Insta Weather is an user friendly and effective application to help you find the current weather forecast of any desired location.
+                    </p>
                 </div>
             </div>
-         </div>
-        
+         </div>    
         {{>footer}}
     </body>
 </html>
