--- a/src/views/pages/index.hbs
+++ b/src/views/pages/index.hbs
@@ -1,65 +1,81 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Insta Weather</title>
-        <script src='https://kit.fontawesome.com/a076d05399.js'></script>
-        <link rel="stylesheet" href="/css/styles.css">
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">   
-    </head>
-    <body>
-        {{>header}}
+
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Insta Weather</title>
+    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+</head>
+
+<body>
+    {{>header}}
+    <div class="content">
         <div class="title">
             <h1> Welcome To Insta Weather!</h1>
-        </div> 
-          
+        </div>
         <div class="container search">
-            <div class="row " >
-                <div class="col-sm-8 mx-auto">
-                    <form >
-                    <input type="text" placeholder="Enter a location" class="form-control">    
-                </div>
-                <div class="col-sm-3">
-                    <button class="btn ">Search</button>
+            <div class="row">
+                <form >
+                <div class="form-row align-items-center">
+
+                
+                <div class="col-auto ">
                     
+                        <input type="text" placeholder="Enter a location" class="form-control">
                 </div>
-                </form>
+                <div class="col-auto">
+                        <button class="btn ">Search</button>
+                </div>
+                </div>
+                    </form>
             </div>
         </div>
-            <div class="container inner-con x " style="display:none;">
-                <div class="row ">
-                    <div class="col-md-12">
-                        <p id="place"></p>
-                    </div>    
-                </div>
-                <div class="row">
-                    <p id="temp"> </p>     
-                </div>
-                <div class="row ">    
-                    <img id="logo" src="" >
-                    <p id="summary"> </p>
+        <div class="container inner-con x " style="display:none;">
+            <div class="row ">
+                <div class="col-md-12">
+                    <p id="place"></p>
                 </div>
             </div>
-         
-            <div class="container ">     
-                <div class="row bottom">
-                    <div class="col-sm-6 a x" style="display:none;">
-                        <div><h2 id="c2"></h2></div>
-                        <div><h3>Humidity</h3></div>
+            <div class="row">
+                <p id="temp"> </p>
+            </div>
+            <div class="row ">
+                <img id="logo" src="">
+                <p id="summary"> </p>
+            </div>
+        </div>
+        <div class="container lower">
+            <div class="row bottom">
+                <div class="col-sm-6 x" style="display:none;">
+                    <div class="row">
+                        <div class="col-sm-6">
+                            <h3>Humidity :</h3>
+                        </div>
+                        <div class="col-sm-6">
+                            <h2 id="c2"></h2>
+                        </div>
                     </div>
-                    <div class="col-sm-6 x" style="display:none;">
-                        <div ><h2 id="c3"></h2></div>
-                        <div><h3>Wind Speed</h3></div>
+                </div>
+                <div class="col-sm-6 x" style="display:none;">
+                    <div class="row">
+                        <div class="col-sm-6">
+                            <h3>Wind Speed :</h3>
+                        </div>
+                        <div class="col-sm-6">
+                            <h2 id="c3"></h2>
+                        </div>
                     </div>
                 </div>
             </div>
-        
-    
-
-
-
-
-    <script  src="/script/app.js"></script>
+        </div>
+    </div>
+    <script src="/script/app.js"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     {{>footer}}
-    </body>
+</body>
+
 </html>
