--- a/src/views/partials/header.hbs
+++ b/src/views/partials/header.hbs
@@ -1,13 +1,16 @@
-
-        <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-                <a class=" navbar-brand" href="#">Insta Weather</a>
-         <ul class="navbar-nav ">
-             <li class="nav-item">
-                <a class=" nav-link" href="/">Home</a>
-             </li>
-             <li class="nav-item">
-                <a class=" nav-link" href="/about">About</a>
-             </li>
-            
-         </ul>
-        </nav>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+   <a class="navbar-brand" href="/"><b>Insta Weather</b></a>
+   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+   </button>
+   <div class="collapse navbar-collapse" id="navbarText">
+      <ul class="navbar-nav mr-auto">
+         <li class="nav-item {{ activeA}}">
+            <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+         </li>
+         <li class="nav-item {{activeB}}">
+            <a class="nav-link" href="/about">About</a>
+         </li>
+      </ul>
+   </div>
+</nav>
