--- a/src/views/pages/about.hbs
+++ b/src/views/pages/about.hbs
@@ -8,6 +8,7 @@
     </head>
     <body>
         {{>header}}
+        <div class="content">
        <div class="container">
             <div class="row">
                 <div class="col-sm-12">
@@ -21,7 +22,8 @@
                     </p>
                 </div>
             </div>
-         </div>    
+         </div>   
+         </div> 
         {{>footer}}
     </body>
 </html>
